Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 1.0
-
None
-
None
Description
Bug in the substitution code in authorization.cc:
if (status.ok()) { stringstream ss; ss << "InitKerberos call to gethostname failed: errno " << errno; LOG(ERROR) << ss; return Status(ss.str()); } FLAGS_principal.replace(off, HOSTNAME_PATTERN.size(), hostname);
The result is that Impala exits if --principal contains _HOST which is not right.