IMPALA-351: Fix substitution logic when _HOST is in the principal name