be/src/exec/scan-node.cc
@@ -36,7 +36,7 @@ const string ScanNode::SCANNER_THREAD_TOTAL_WALLCLOCK_TIME =
 const string ScanNode::AVERAGE_SCANNER_THREAD_CONCURRENCY =
     "AverageScannerThreadConcurrency";
 const string ScanNode::AVERAGE_IO_MGR_QUEUE_CAPACITY =
-    "AverageIoMgrQueueCapcity";
+    "AverageIoMgrQueueCapacity";
 const string ScanNode::AVERAGE_IO_MGR_QUEUE_SIZE =
     "AverageIoMgrQueueSize";
 const string ScanNode::AVERAGE_HDFS_READ_THREAD_CONCURRENCY =
